chrome://gpu: add encrypted to video acceleration info

This CL adds some extra info re. support for encrypted streams to
the chrome://gpu video acceleration entry, to avoid the duplication
of formats described in the bug.

Bug: 783100
Change-Id: I06bf1bd450e71cdf2db88ec27f4ffff98814accb